# Rusty-Bot

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: commands.rs  config.rs  handler.rs  log.rs  main.rs
src/commands/: fun.rs  general.rs  help.rs  image.rs  moderation.rs  tools.rs
