[package]
name = "Rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
dotenv = "0.15.0"
serenity = "0.11.5"
serenity_utils = "0.7"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rand = "0.8"
reqwest = "0.11"
base64 = "0.13"
hex = "0.4"
log = "0.4"
qrcode = "0.12"
fast_qr = { version = "0.10.0", features = ["image"] }
image = "0.24.7"



